--- a/src/agePage.css
+++ b/src/agePage.css
@@ -1,25 +1,13 @@
-.agePageYellow {
-	position: absolute;
-	z-index: 1000;
-	opacity: 0;
-	padding: 0;
-    margin: 0;
-	top: 0;
-	left: 0;
-	height: 100vh;
-	width: 100vw;
-	background: url(images/yellow.jpg) repeat-x repeat-y center center;
-	pointer-events: none;
-}
-
 .agePageText {
 	position: fixed;
-	z-index: 1001;
-	margin: 20px;
-	padding: 20px;
-	opacity: 0.7;
+	z-index: 1000;
+	margin: 1em;
+	padding: 1em;
+	border-radius: 1em;
 	bottom: 0;
 	right: 0;
 	pointer-events: none;
-	background-color: rgba(112, 108, 103, 0.5);
+	color: rgba(38, 36, 33, 0.9);
+	box-shadow: 0 0.1em 0.5em rgba(38, 36, 33, 0.5);
+	background-color: rgba(230, 227, 222, 0.8);
 }
