--- a/src/agePage.css
+++ b/src/agePage.css
@@ -1,13 +1,14 @@
 .agePageText {
+	font: normal 12px/12px "Georgia Pro", georgia, serif;
 	position: fixed;
 	z-index: 1000;
-	margin: 1em;
-	padding: 1em;
-	border-radius: 1em;
+	margin: 10px;
+	padding: 10px;
+	border-radius: 10px;
 	bottom: 0;
 	right: 0;
 	pointer-events: none;
 	color: rgba(38, 36, 33, 0.9);
-	box-shadow: 0 0.1em 0.5em rgba(38, 36, 33, 0.5);
+	box-shadow: 0 2px 5px rgba(38, 36, 33, 0.5);
 	background-color: rgba(230, 227, 222, 0.8);
 }
